--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -45,14 +45,11 @@
             <a href="#">Pages</a>
           </li>
           <li class="nav-link">
-            <a href="#">Pages</a>
-          </li>
-          <li class="nav-link">
             <a href="#">Contact Us</a>
           </li>
         </ul>
       </div>
- 
+
       <div class="social text-gray">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -64,7 +61,17 @@
   <!-----------x----------- Navigation -----------x----------->
 
   <!----------------------- Main Site Section ----------------------->
-  
+  <main>
+    <!------------------ Site Title ------------------>
+    <section class="site-title">
+      <div class="site-background">
+        <h3>Tours & Travels</h3>
+        <h1>Amazing Place on Earth</h1>
+        <button class="btn">Explore</button>
+      </div>
+    </section>
+    <!---------x-------- Site Title ---------x-------->
+  </main>
   <!-----------x----------- Main Site Section -----------x----------->
 
   <!-- Jquery Library file -->
