--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -10,6 +10,10 @@
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="./css/all.css">
 
+  <!-- Owl-Carousel -->
+  <link rel="stylesheet" href="./css/owl.carousel.min.css">
+  <link rel="stylesheet" href="./css/owl.theme.default.min.css">
+
   <!-- Custom Style -->
   <link rel="stylesheet" href="./css/Style.css">
 </head>
@@ -71,11 +75,63 @@
       </div>
     </section>
     <!---------x-------- Site Title ---------x-------->
+
+    <!------------------ Blog Carousel ------------------>
+    <section>
+      <div class="blog">
+        <div class="container">
+          <div class="owl-carousel owl-theme blog-post">
+            <div class="blog-content">
+              <img src="./assets/Blog-post/post-1.jpg" alt="post-1">
+              <div class="blog-title">
+                <h3>London Fashion week's continued the evolution</h3>
+                <button class="btn btn-blog">Fashion</button>
+                <span>2 minutes</span>
+              </div>
+            </div>
+            <div class="blog-content">
+              <img src="./assets/Blog-post/post-3.jpg" alt="post-3">
+              <div class="blog-title">
+                <h3>London Fashion week's continued the evolution</h3>
+                <button class="btn btn-blog">Fashion</button>
+                <span>2 minutes</span>
+              </div>
+            </div>
+            <div class="blog-content">
+              <img src="./assets/Blog-post/post-2.jpg" alt="post-2">
+              <div class="blog-title">
+                <h3>London Fashion week's continued the evolution</h3>
+                <button class="btn btn-blog">Fashion</button>
+                <span>2 minutes</span>
+              </div>
+            </div>
+            <div class="blog-content">
+              <img src="./assets/Blog-post/post-5.png" alt="post-5">
+              <div class="blog-title">
+                <h3>London Fashion week's continued the evolution</h3>
+                <button class="btn btn-blog">Fashion</button>
+                <span>2 minutes</span>
+              </div>
+            </div>
+          </div>
+          <div class="owl-navigation">
+            <span class="owl-nav-prev"><i class="fas fa-long-arrow-alt-left"></i></span>
+            <span class="owl-nav-next"><i class="fas fa-long-arrow-alt-right"></i></span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!---------x-------- Blog Carousel ---------x-------->
+
+
   </main>
   <!-----------x----------- Main Site Section -----------x----------->
 
   <!-- Jquery Library file -->
   <script src="./js/Jquery3.4.1.min.js"></script>
+
+  <!-- Owl-Carousel js -->
+  <script src="./js/owl.carousel.min.js"></script>
 
   <!-- Custom JavaScript File -->
   <script src="./js/main.js"></script>
