--- a/Blooger/index.html
+++ b/Blooger/index.html
@@ -106,7 +106,7 @@
                 <span>2 minutes</span>
               </div>
             </div>
-            <div class="blog-content">
+            <div class="blog-content" data-aos="fade-left" data-aos-delay="200">
               <img src="./assets/Blog-post/post-5.png" alt="post-5" />
               <div class="blog-title">
                 <h3>London Fashion week's continued the evolution</h3>
