--- a/UIWebsite/index.html
+++ b/UIWebsite/index.html
@@ -86,7 +86,7 @@
 
         <div class="row justify-content-center text-center">
           <div class="col-md-4">
-            <div class="card" style="width:20rem">
+            <div class="card">
               <img src="./Stock/pexels-2.jpg" alt="image1" class="card-img-top">
               <div class="card-body">
                 <h4 class="card-title">Responsive</h4>
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card" style="width:20rem">
+            <div class="card">
               <img src="./Stock/pexels-4.jpg" alt="image1" class="card-img-top">
               <div class="card-body">
                 <h4 class="card-title">Responsive</h4>
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card" style="width:20rem">
+            <div class="card">
               <img src="./Stock/pexels-5.jpg" alt="image1" class="card-img-top">
               <div class="card-body">
                 <h4 class="card-title">Responsive</h4>
@@ -116,13 +116,170 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
+
+    <div class="section-2">
+      <div class="container-fluid">
+        <div class="d-flex justify-content-end">
+          <div class="d-flex flex-column m-3">
+            <h1 class="heading-1">Like & Share Your Love</h1>
+            <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, voluptas?</p>
+
+            <input type="button" value="Show" class="btn btn-danger">
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="section-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="d-flex flex-row">
+              <i class="fas fa-question fa-3x m-2"></i>
+              <div class="d-flex flex-column">
+                <h3 class="m-2">24/7 Support</h3>
+                <p class="m-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sit fugit expedita? Eveniet, impedit
+                  totam! Dolor, impedit iste. Sunt, quas!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="d-flex flex-row">
+              <i class="fas fa-seedling fa-3x m-2"></i>
+              <div class="d-flex flex-column">
+                <h3 class="m-2">Marketing</h3>
+                <p class="m-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sit fugit expedita? Eveniet, impedit
+                  totam! Dolor, impedit iste. Sunt, quas!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="d-flex flex-row">
+              <i class="fas fa-rocket fa-3x m-2"></i>
+              <div class="d-flex flex-column">
+                <h3 class="m-2">Speed</h3>
+                <p class="m-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sit fugit expedita? Eveniet, impedit
+                  totam! Dolor, impedit iste. Sunt, quas!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="d-flex flex-row">
+              <i class="fas fa-user-shield fa-3x m-2"></i>
+              <div class="d-flex flex-column">
+                <h3 class="m-2">Authorized</h3>
+                <p class="m-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sit fugit expedita? Eveniet, impedit
+                  totam! Dolor, impedit iste. Sunt, quas!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="d-flex flex-row">
+              <i class="fas fa-search fa-3x m-2"></i>
+              <div class="d-flex flex-column">
+                <h3 class="m-2">SEO</h3>
+                <p class="m-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sit fugit expedita? Eveniet, impedit
+                  totam! Dolor, impedit iste. Sunt, quas!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="d-flex flex-row">
+              <i class="fas fa-sliders-h fa-3x m-2"></i>
+              <div class="d-flex flex-column">
+                <h3 class="m-2">Customize</h3>
+                <p class="m-2">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sit fugit expedita? Eveniet, impedit
+                  totam! Dolor, impedit iste. Sunt, quas!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="section-4 bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7">
+            <img src="./Stock/section-4_bg.jpg" alt="img" width="590">
+          </div>
+          <div class="col-md-5">
+            <h1 class="text-white">Didn't Know Where to start From</h1>
+            <a href="#">Join Us</a>
+
+            <p class="para-1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo laudantium delectus eum doloremque? Maiores
+              omnis, placeat deserunt et minima maxime quaerat vitae ullam molestias magni, quas quam consequatur fugit
+              explicabo.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </main>
 
+  <footer>
+    <div class="section-5 text-center">
+      <h4 style="margin-top:5%;">Get Template Design From jyh7a</h4>
+      <h4 class="my-4">If you need any Help</h4>
+
+      <div class="form-inline justify-content-center">
+        <input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2">
+        <input type="button" value="Contact Us" class="btn btn-danger px-4 py-2">
+      </div>
+
+      <div class="social" style="margin:5%">
+        <div class="d-flex flex-row justify-content-center">
+          <i class="fab fa-facebook-f m-2"></i>
+          <i class="fab fa-twitter m-2"></i>
+          <i class="fab fa-instagram m-2"></i>
+          <i class="fab fa-youtube m-2"></i>
+        </div>
+      </div>
+
+      <hr>
+      <h5 style="color:lightseagreen">jyh7a &copy;</h5>
+
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <script>
+    window.sr = ScrollReveal({ duration: 1500 });
+    sr.reveal('.site-content .d-flex');
+    sr.reveal('.section-1 .card');
+    sr.reveal('.section-2 .d-flex');
+    sr.reveal('.section-3 .col-md-4');
+    sr.reveal('.section-4 .col-md-7, .col-md-5');
+  </script>
 </body>
 
 </html>
